# m17n-lib

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap.sh  configure.ac  m17n-config-2.0.in  m17n-config.in  m17n-core-2.0.pc.in  m17n-core.pc.in  m17n-flt-2.0.pc.in  m17n-flt.pc.in  m17n-gui-2.0.pc.in  m17n-gui.pc.in  m17n-shell-2.0.pc.in  m17n-shell.pc.in
example/: .cvsignore  .gdb.util  .gdbinit  .gitignore  ChangeLog  HELLO-ja.utf8  HELLO-ja.xml  HELLO.html  HELLO.utf8  HELLO.xml  M17NEdit.ja  MEdit.ja  Makefile.am  linebreak.c  mconv.c  mdate.c  mdump.c  medit.c  mimx-anthy.c  mimx-ispell.c  minputtest.c  mview.c
po/: ChangeLog  Makevars  POTFILES.in
src/: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  character.c  character.h  charset.c  charset.h  chartab.c  chartab.h  coding.c  coding.h  database.c  database.h  draw.c  face.c  face.h  font-flt.c  font-ft.c  font.c  font.h  fontset.c  fontset.h  input-gui.c  input-xml.c  input.c  input.h  internal-flt.h  internal-gui.h  internal.h  language.c  language.h  linkcore.c  linkgui.c  linkshell.c  locale.c  m17n-X.c  m17n-X.h  m17n-core.c  (+23 more)
